0025459: Visualization - AIS_ColoredShape::SetMaterial() should not reset custom colors